feat: enhance application and job management with new entities and methods
- Added StartTestRequest DTO for test initiation
- Introduced StorageService for APK and defect image management
- Updated Job, Defect, and TestRun entities to use OffsetDateTime for timestamps
- Enhanced JobStatusRepository with findByName method
- Added new Liquibase migrations for application schema updates
- Implemented analysis rerun functionality in AnalysisDebugController